Fix spacing between nav links

--- a/app/assets/stylesheets/components/greeting.scss
+++ b/app/assets/stylesheets/components/greeting.scss
@@ -66,6 +66,10 @@
   padding-right: 15px;
 }
 
+.nav nav a {
+  margin-right: 20px;
+}
+
 // .nav nav {
 //   margin-right: 300px;
 // }
